[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Scripts/ModeSwitcher.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/BigMode_Checkpoint.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 19.75 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "activate"
length = 0.5
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 2, 1, 2 ]
}

[node name="ModeSwitcher" type="Area2D"]
scale = Vector2( 2, 2 )
collision_layer = 32
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -20.25 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -26 )
texture = ExtResource( 2 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/activate = SubResource( 2 )

[node name="ModeText" type="RichTextLabel" parent="."]
visible = false
margin_left = -28.0
margin_top = -80.0
margin_right = 85.0
margin_bottom = -13.0
rect_scale = Vector2( 0.495611, 0.495611 )
bbcode_enabled = true
bbcode_text = "[center]1= jump mode
2 = run mode
3= attack mode"
text = "1= jump mode
2 = run mode
3= attack mode"

[node name="point" type="Node2D" parent="."]
position = Vector2( 0, -43 )

[connection signal="body_entered" from="." to="." method="_on_ModeSwitcher_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ModeSwitcher_body_exited"]
